--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://Ketan3101:$HF_TOKEN@huggingface.co/spaces/Ketan3101/ConvoBrief main
+        run: git push --force https://Ketan3101:$HF_TOKEN@huggingface.co/spaces/Ketan3101/ConvoBrief main
